# autograde

./: README.md  autograde  autograde.py  diagnostic.py
cmake/: CMakeLists.txt
grading/: build.py  cmake.py  diagnostic.py  dir.py  make.py
libautograde/: directory.py
